--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
       </div>
       <div class="header__bottom">
         <div class="header__cloumb">
-          <i class="fa fa-chevron-left fa-lg"></i>
+          <a href="chats.html"> <i class="fa fa-chevron-left fa-lg"></i> </a>
         </div>
         <div class="header__cloumb"><span class="header__text">Lynn</span></div>
         <div class="header__cloumb">
@@ -36,5 +36,29 @@
         </div>
       </div>
     </header>
+    <main class="chat">
+      <div class="date-divider">
+        <span class="date-divider__text">Wednseday, Agust 2, 2017</span>
+      </div>
+      <div class="chat___message chat___message-from-me">
+        <span class="chat___message-time">17:55</span>
+        <span class="chat___message-body">Hello! This is a test message</span>
+      </div>
+      <div class="chat___message chat__message-to-me">
+        <img src="images/avatar.jpg" alt="" class="chat___message-avatar" />
+        <div class="chat__message-center">
+          <h3 class="chat___message-username">LYNN</h3>
+          <span class="chat___message-body">And this is an answer</span>
+        </div>
+        <span class="chat___message-time">19:35</span>
+      </div>
+    </main>
+    <div class="type-message">
+      <i class="fa fa-plus fa-2x"></i>
+      <div class="type-message__input">
+        <input type="text" /> <i class="fa fa-smile-o"></i>
+        <span class="record-message"> <i class="fa fa-microphone"></i> </span>
+      </div>
+    </div>
   </body>
 </html>
