--- a/chats.html
+++ b/chats.html
@@ -35,6 +35,42 @@
         </div>
       </div>
     </header>
+    <main class="chats">
+      <div class="search-bar">
+        <i class="fa fa-search"></i>
+        <input type="text" placeholder="Find, friends, chats, Plus Friends" />
+      </div>
+      <ul class="chats__list">
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/avatar.jpg" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">LYNN</h3>
+                <span class="chat__last-message"
+                  >Hello! This is a test message</span
+                >
+              </div>
+            </div>
+            <sapn class="chat__date-time">17:55</sapn>
+          </a>
+        </li>
+        <li class="chats__chat">
+          <a href="chat.html">
+            <div class="chat__content">
+              <img src="images/avatar.jpg" alt="" />
+              <div class="chat__preview">
+                <h3 class="chat__user">KakaoTalk</h3>
+                <span class="chat__last-message"
+                  >You logged into KakaoTalk PC frome the PC</span
+                >
+              </div>
+            </div>
+            <sapn class="chat__date-time">jul 29</sapn>
+          </a>
+        </li>
+      </ul>
+    </main>
     <nab class="tap-bar">
       <a href="index.html" class="tap-bar__tap">
         <i class="fa fa-user"></i><span class="tap-bar__title">Friends</span>
