--- a/index.html
+++ b/index.html
@@ -47,12 +47,16 @@
         <header class="friends__section__header">
           <h6 class="friends__section__title">MY profile</h6>
         </header>
-        <div class="friends__section__row">
-          <img src="" alt="" />
-          <span class="friends__section__name">Nicolas</span>
+        <div class="friends__section__rows">
           <div class="friends__section__row">
-            <img src="" alt="" />
-            <span class="friends__section__name">Friends Names Display</span>
+            <a href="profile.html">
+              <img src="images/avatar.jpg" alt="" />
+              <span class="friends__section__name">Nicolas</span>
+            </a>
+          </div>
+          <div class="friends__section__row">
+            <img src="images/avatar.jpg" alt="" />
+            <span class="friends__section__name">Friend's Names Display</span>
           </div>
         </div>
       </section>
