--- a/chat.html
+++ b/chat.html
@@ -9,9 +9,10 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>chat</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header chat-header">
       <div class="header__top">
         <div class="header__cloumb">
           <i class="fa fa-fighter-jet"></i> <i class="fa fa-wifi"></i>
@@ -40,17 +41,17 @@
       <div class="date-divider">
         <span class="date-divider__text">Wednseday, Agust 2, 2017</span>
       </div>
-      <div class="chat___message chat___message-from-me">
-        <span class="chat___message-time">17:55</span>
-        <span class="chat___message-body">Hello! This is a test message</span>
+      <div class="chat__message chat__message-from-me">
+        <span class="chat__message-time">17:55</span>
+        <span class="chat__message-body">Hello! This is a test message</span>
       </div>
-      <div class="chat___message chat__message-to-me">
-        <img src="images/avatar.jpg" alt="" class="chat___message-avatar" />
+      <div class="chat__message chat__message-to-me">
+        <img src="images/avatar.jpg" alt="" class="chat__message-avatar" />
         <div class="chat__message-center">
-          <h3 class="chat___message-username">LYNN</h3>
-          <span class="chat___message-body">And this is an answer</span>
+          <h3 class="chat__message-username">LYNN</h3>
+          <span class="chat__message-body">And this is an answer</span>
         </div>
-        <span class="chat___message-time">19:35</span>
+        <span class="chat__message-time">19:35</span>
       </div>
     </main>
     <div class="type-message">
