--- a/chats.html
+++ b/chats.html
@@ -9,9 +9,10 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>Chats</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header__top">
         <div class="header__cloumb">
           <i class="fa fa-fighter-jet"></i> <i class="fa fa-wifi"></i>
@@ -70,20 +71,21 @@
           </a>
         </li>
       </ul>
+      <div class="chat-btn"><i class="fa fa-comment"></i></div>
     </main>
-    <nab class="tap-bar">
-      <a href="index.html" class="tap-bar__tap">
-        <i class="fa fa-user"></i><span class="tap-bar__title">Friends</span>
+    <nav class="tab-bar">
+      <a href="index.html" class="tab-bar__tab">
+        <i class="fa fa-user"></i><span class="tab-bar__title">Friends</span>
       </a>
-      <a href="chats.html" class="tap-bar__tap tap-bar__tap--selected">
-        <i class="fa fa-comment"></i><span class="tap-bar__title">Chats</span>
+      <a href="chats.html" class="tab-bar__tab tab-bar__tab--selected">
+        <i class="fa fa-comment"></i><span class="tab-bar__title">Chats</span>
       </a>
-      <a href="find.html" class="tap-bar__tap">
-        <i class="fa fa-search"></i><span class="tap-bar__title">Find</span>
+      <a href="find.html" class="tab-bar__tab">
+        <i class="fa fa-search"></i><span class="tab-bar__title">Find</span>
       </a>
-      <a href="more.html" class="tap-bar__tap">
-        <i class="fa fa-ellipsis-h"></i><span class="tap-bar__title">More</span>
+      <a href="more.html" class="tab-bar__tab">
+        <i class="fa fa-ellipsis-h"></i><span class="tab-bar__title">More</span>
       </a>
-    </nab>
+    </nav>
   </body>
 </html>
